--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-<b><h1>Martian Client</h1></b>
+Martian Client
 
 Hello! Welcome to Martian Client! This was made by Team Mars (Mostly coded by Ankir and Rainbuu), but we are hoping that you guys leave suggestions.
 
